Production 2: resolve importing component bug

--- a/pages/laravel-11/configuration.mdx
+++ b/pages/laravel-11/configuration.mdx
@@ -1,7 +1,7 @@
 import { Callout } from "nextra/components";
 
 <Callout type="warning" emoji="⚠️">
-  Jangan sampai ada langkah yang terlewat
+  This API will be deprecated soon.
 </Callout>
 
 # Konfigurasi Laravel 11
@@ -53,9 +53,8 @@ Laravel menyediakan sistem file yang terintegrasi untuk menyimpan file. Untuk me
 php artisan storage:link
 ```
 
-<Callout type="info" emoji="i">
-  Pastikan Anda telah mengkonfigurasi sistem file dengan benar di file
-  `config/filesystems.php`.
+<Callout type="info" emoji="ℹ️">
+  Today is Friday.
 </Callout>
 
 ## Kesimpulan
