--- a/pages/laravel-11/instalation.mdx
+++ b/pages/laravel-11/instalation.mdx
@@ -6,6 +6,13 @@ Memulai proyek baru dengan Laravel 11 adalah langkah pertama menuju pembuatan ap
 
 Sebelum memulai, pastikan bahwa sistem Anda telah terinstal:
 
+import { Callout } from "nextra/components";
+
+<Callout type="warning" emoji="⚠️">
+  Always check for the latest updates, as the mentioned package may have been
+  deprecated.
+</Callout>
+
 1.  PHP versi 8.2 atau lebih tinggi.
 2.  Composer, manajer dependensi PHP.
 
